@@ -1,25 +1,24 @@
 package com.example.transfer.service;
 
 
+import com.example.transfer.entity.FileData;
+import com.example.transfer.model.FileHash;
 import io.minio.*;
 import io.minio.errors.MinioException;
 import lombok.RequiredArgsConstructor;
 import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.core.io.InputStreamResource;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Repository;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.io.File;
 import java.io.IOException;
-import java.io.InputStream;
-import java.io.OutputStream;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.security.InvalidKeyException;
 import java.security.NoSuchAlgorithmException;
+import java.util.ArrayList;
+import java.util.List;
 
 @Slf4j
 @Repository
@@ -50,14 +49,12 @@ public class FileStorageServiceImpl implements FileStorageService {
     }
 
     @Override
-    public boolean delete(String fileName) {
+    public boolean delete(String path, String fileName) {
         try {
-            Path path = Path.of(fileName);
-
             minioClient.deleteObjectTags(DeleteObjectTagsArgs.builder()
-                        .bucket(BUCKET_NAME)
-                        .object(fileName)
-                        .build());
+                    .bucket(BUCKET_NAME)
+                    .object(path + '/' + fileName)
+                    .build());
             log.info("file {} removed ", fileName);
         } catch (MinioException | InvalidKeyException | IOException | NoSuchAlgorithmException e) {
             return false;
@@ -67,17 +64,13 @@ public class FileStorageServiceImpl implements FileStorageService {
 
     @Override
     @SneakyThrows
-    public File getFile(String fileName) {
-
+    public FileData getFile(String path, String fileName) {
         GetObjectResponse response = minioClient.getObject(GetObjectArgs.builder()
                 .bucket(BUCKET_NAME)
-                .object(fileName)
+                .object(path + '/' + fileName)
                 .build());
-        byte[] fileBytes = response.readAllBytes();
-        File tempFile = File.createTempFile("downloaded-", ".tmp");
 
-        // Записываем байты в файл
-        Files.write(Paths.get(tempFile.getPath()), fileBytes);
-        return tempFile;
+        return new FileData(response.readAllBytes(), fileName);
     }
+
 }
